--- a/aula04/ex003.html
+++ b/aula04/ex003.html
@@ -17,10 +17,13 @@
     <h1>Ola, mundo!</h1>
     <p>Ja me livrei da maldicao</p>
     <script>
-        window.alert('Minha primeira mensagem') //mensagem de alerta
-        window.confirm('Esta gostando de javascrip?') // janela com botao ok e cancelar
-        window.prompt('Qual é seu nome?') // vai pergunta o nome
-
+        
+       var n1 = Number.parseInt(window.prompt('Digite um numero: '))
+       var n2 = Number.parseInt(window.prompt('Digite outro numero: '))
+       var s = n1 + n2
+       window.alert(`a soma entre ${n1}  e ${n2} é igual a ${s}`5)
+       // (number = number) para adiçao
+       // (string = string) para concatenaçao
         
     </script>
 </body>
