--- a/aula04/ex002 copy.html
+++ b/aula04/ex002 copy.html
@@ -17,9 +17,9 @@
     <h1>Ola, mundo!</h1>
     <p>Ja me livrei da maldicao</p>
     <script>
-        window.alert('Minha primeira mensagem') //mensagem de alerta
-        window.confirm('Esta gostando de javascrip?') // janela com botao ok e cancelar
-        window.prompt('Qual é seu nome?') // vai pergunta o nome
+        
+         var nome =window.prompt('Qual é seu nome?') // vai pergunta o nome
+         window.alert('E um grande prazer te conhecer,' + nome + '!') // sinal de mais significa concatenacao! 
 
         
     </script>
