--- a/aula04/ex005.html
+++ b/aula04/ex005.html
@@ -5,9 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeiros passos com DOM</title>
+    <style>
+        body{
+            background-color: rgb(55, 65, 178);
+            color: white;
+            font-family: Arial, Helvetica, sans-serif;
+            
+        }
+    </style>
 </head>
 <body>
     <h1>Iniciando estudos com DOM</h1>
-    
+    <p>Aqui vai o resultador</p>
+    <p>Aprendendo a usar o <strong>DOM </strong>em JavaScript</p>
+    <div id="msg">Clique em mim</div>
+    <script>
+       // var p1 = window.document.getElementsByTagName('p')[1]
+      //  window.document.write(p1.innerText)
+      //  p1.style.color = 'black'
+      //  var d = window.document.getElementById('msg')
+       // d.style.background = 'green'
+      //  d.innerHTML = 'Estou aguardando...'
+      var d = window.document.querySelector('div#msg')
+      d.style.color = 'yellow'
+
+    </script>
 </body>
 </html>
